agruegue el aboutme

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                 <a class="navbar-brand" href={% url "inicio" %}>Inicio</a>
                 <a class="navbar-brand" href={% url "crear_libro" %}>Crear libro</a>
                 <a class="navbar-brand" href={% url "buscar_libro" %}>Buscar libro</a> 
+                <a class="navbar-brand" href={% url "about_me" %}>About me</a>
                 {% comment %} <a class="btn btn-primary" href="#signup">Sign Up</a> {% endcomment %}
             </div>
         </nav>
